# sha1cracker

./: .gitignore
c/: CMakeLists.txt  ReadMe.txt  SHA1Crack.c  bfsha1match.c  bfsha1match.h  dictionary.txt  hashed-passwords.txt  passwordgenerator.c  passwordgenerator.h  sha1collisionchecker.c
src/: PasswordGenerator.java  SHA1Cracker.java
